[package]
name = "led"
version = "0.1.0"
authors = ["jonander"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "led"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"

# esp-idf-svc: This crate provides higher-level abstractions for services like networking, logging, and system utilities. Use this if you need to work with services like Wi-Fi, HTTP, or logging.
# esp-idf-hal: This crate provides low-level hardware abstraction for peripherals like GPIO, I2C, SPI, etc. Use this if you need to directly control hardware peripherals.
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = { version = "0.45.2"}

[build-dependencies]
embuild = "0.33"
